--- a/udmf2.lfm
+++ b/udmf2.lfm
@@ -2,8 +2,8 @@ object DMF2: TDMF2
   OnCreate = DataModuleCreate
   OldCreateOrder = False
   Height = 384
-  HorizontalOffset = 255
-  VerticalOffset = 237
+  HorizontalOffset = 497
+  VerticalOffset = 279
   Width = 546
   PPI = 96
   object ZConnection: TZConnection
@@ -11,8 +11,9 @@ object DMF2: TDMF2
     AutoEncodeStrings = True
     Catalog = 'teatrixDB'
     Properties.Strings = (
-      'AutoEncodeStrings=True'
       'controls_cp=CP_UTF8'
+      'codepage='
+      'AutoEncodeStrings=ON'
     )
     HostName = '127.0.0.1'
     Port = 0
